--- a/public_html/templates/default/assets/css/style.css
+++ b/public_html/templates/default/assets/css/style.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   border: 0;
+  font-family: 'Courier New', monospace;
 }
 
 *,
@@ -36,7 +37,7 @@ body {
   width: 100%;
   font-size: 100%;
   line-height: 1;
-  font-size: 14px;
+  /* font-size: 14px; */
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
@@ -176,7 +177,7 @@ body {
   padding: 15px;
   color: #ffffff;
   background-color: #64c29e;
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 3.6px;
@@ -188,9 +189,14 @@ body {
   border-radius: 1px;
 }
 
+.header .tagline:hover {
+	background-color: #22da93;
+}
+
 @media (max-width: 750px) {
   .header .tagline {
-    font-size: 14px;
+    font-size: 16px;
+	 margin-top: 0;
   }
 }
 
@@ -211,7 +217,7 @@ body {
     border-radius: 50%;
     z-index: 9999;
     cursor: pointer;
-    background: #282f35;
+    background: #64c29e;
     /* Transform menu icon into close icon */
   }
   .header .menu-icon__wrapper {
@@ -269,13 +275,13 @@ body {
   padding-top: 10px;
   -webkit-box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 20px 5px rgba(0, 0, 0, 0.25);
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 
 @media (max-width: 750px) {
-  .header__nav ul {
+   .header__nav ul {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -283,10 +289,11 @@ body {
     opacity: 0;
     visibility: hidden;
     height: 100%;
-    width: 100%;
+    /* width: 100%; */
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.9);
-  }
+    background-color: rgba(0, 0, 0, 0.5);
+	 padding-top: 230px;
+  } 
   .header__nav ul li:nth-child(3) {
     position: absolute;
     top: 15px;
@@ -302,19 +309,20 @@ body {
     display: flex;
     opacity: 1;
     visibility: visible;
+	 overflow: auto;
   }
 }
 
 .header__nav li {
   margin: 0 30px;
-  display: inline-block;
+  display: flex;
   /* 1st and 2nd links hover effect */
 }
 
 @media (max-width: 750px) {
   .header__nav li {
-    height: 8em;
-    line-height: 6em;
+    /* height: 8em; */
+    /* line-height: 6em; */
     width: 90%;
   }
 }
@@ -352,8 +360,9 @@ body {
 
 .header__link {
   text-decoration: none;
-  color: #cfcfcf;
+  color: #08f59a;
   text-transform: uppercase;
+  font-size: 17px;
   font-weight: 700;
   letter-spacing: 2px;
   position: relative;
@@ -405,6 +414,7 @@ body {
 }
 
 .generation__title {
+	font-size: 20px;
   margin-bottom: 30px;
   padding-left: 30px;
   padding-right: 30px;
@@ -416,7 +426,7 @@ body {
   font-weight: 300;
   margin-right: auto;
   color: #848789;
-  font-size: 14px;
+  font-size: 18px;
   line-height: 21px;
   line-height: 1.5;
 }
@@ -424,8 +434,8 @@ body {
 @media (max-width: 750px) {
   .generation__text {
     padding-left: 5vw;
-    padding-right: 5vw;
-    font-size: 14px;
+    padding-right: 5vw;    
+	 font-size: 16px;
   }
 }
 
@@ -559,6 +569,7 @@ body {
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
   margin-bottom: 24px;
+  font-size: 20px;
 }
 
 .vintage__text {
@@ -568,7 +579,7 @@ body {
           flex: 0 1 auto;
   padding-left: 62px;
   padding-right: 63px;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 300;
   line-height: 21px;
   text-align: center;
@@ -578,7 +589,7 @@ body {
   .vintage__text {
     padding-left: 5vw;
     padding-right: 5vw;
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
@@ -713,6 +724,7 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
+			 font-size: 20px;
 }
 
 .boriosa__text {
@@ -727,13 +739,14 @@ body {
   line-height: 21px;
   text-align: center;
   position: relative;
+  font-size: 18px;
 }
 
 @media (max-width: 750px) {
   .boriosa__text {
     padding-left: 5vw;
     padding-right: 5vw;
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
@@ -890,6 +903,7 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
           flex: 0 0 auto;
+			 font-size: 20px;
 }
 
 .retro__text {
@@ -899,7 +913,7 @@ body {
           flex: 0 1 auto;
   padding-left: 62px;
   padding-right: 63px;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 300;
   line-height: 21px;
   text-align: center;
@@ -909,7 +923,7 @@ body {
   .retro__text {
     padding-left: 5vw;
     padding-right: 5vw;
-    font-size: 14px;
+    font-size: 16px;
   }
 }
 
@@ -1398,7 +1412,7 @@ body {
 }
 
 .shop__button-container {
-  background-color: #282f35;
+  background-color: rgba(141, 108, 231, 0.3);;
   padding-top: 75px;
   padding-bottom: 75px;
   display: -webkit-box;
@@ -1412,7 +1426,7 @@ body {
           justify-content: center;
 }
 
-.shop__button {
+.shop__button a {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1426,19 +1440,20 @@ body {
   max-width: 300px;
   height: 60px;
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 2.8px;
   border: 1px solid #64c29e;
-  background-color: #282f35;
+  background-color: #325b7ea9;
   color: #ffffff;
   cursor: pointer;
   position: relative;
+  padding: 0 30px;
   z-index: 2;
 }
 
-.shop__button:after {
+.shop__button a:after {
   width: 0;
   height: 100%;
   background: #64c29e;
@@ -1450,17 +1465,17 @@ body {
   position: absolute;
 }
 
-.shop__button:hover {
+.shop__button a:hover {
   border: 1px solid rgba(255, 255, 255, 0.8);
   color: #ffffff;
 }
 
-.shop__button:hover:after {
+.shop__button a:hover:after {
   width: 100%;
   z-index: -1;
 }
 
-.shop__button:active {
+.shop__button a:active {
   color: #282f35;
 }
 
@@ -1623,6 +1638,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  flex-wrap: wrap;
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
@@ -1643,9 +1659,11 @@ body {
 
 .footer__adress {
   color: #848789;
-  font-size: 14px;
+  font-size: 20px;
   line-height: 17.87px;
   font-style: italic;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .footer__adress a {
@@ -1659,13 +1677,13 @@ body {
 }
 
 .footer__adress div:first-child {
-  font-size: 16px;
+  font-size: 22px;
   font-weight: 700;
-  padding-bottom: 10px;
+  padding-bottom: 10px;  
 }
 
 .footer__adress div:nth-child(2) {
-  padding-bottom: 10px;
+  padding-bottom: 10px; 
 }
 
 .footer__social-wrapper {
